--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,13 @@ body {
   font-family: "Poppins", sans-serif;
 }
 
+.goog-te-banner-frame.skiptranslate {
+  display: none !important;
+}
+body {
+  top: 0px !important;
+}
+
 .carousel-control-next-icon:after {
   content: ">";
   font-size: 55px;
